# strip-ansi-cli

./: .travis.yml  Cargo.toml  README.md  generate-completions.sh
.github/workflows/: deploy.yaml  miri.yaml  test.yaml
ci/github-actions/: generate-pkgbuild.py3
src/: app.rs  args.rs  lib.rs  main.rs
src/sub/completions/: main.rs
template/strip-ansi/: PKGBUILD
template/strip-ansi-bin/: PKGBUILD
tests/: completion_sync.rs
