[package]
name = "strip-ansi-cli"
description = "Strip ANSI escape sequences from text"
version = "0.1.0"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/strip-ansi-cli"
repository = "https://github.com/KSXGitHub/strip-ansi-cli.git"
keywords = [
  "color",
  "escape",
  "ansi",
  "strip-ansi",
  "cli",
]
categories = ["command-line-utilities"]
include = [
  "/src",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE.md",
]

[lib]
name = "strip_ansi_cli"
path = "src/lib.rs"

[[bin]]
name = "strip-ansi"
path = "src/main.rs"

[[bin]]
name = "strip-ansi-completions"
path = "src/sub/completions/main.rs"

[dependencies]
strip-ansi-escapes = "^0.1.1"
structopt = "^0.3.26"
structopt-utilities = "^0.1.0"
pipe-trait = "^0.3.2"

[profile.release]
opt-level = "s"
